# opentrons-python-packages

./: .gitignore  CI-SIMPLIFICATION.md  README.md  build-packages  install.sh  test.c
.github/ISSUE_TEMPLATE/: package_issue.yml  package_request.yml
.github/workflows/: build-and-deploy.yaml  build-artifacts.yaml  build-packages-dev.yaml  build-packages-prod.yaml  build-packages-staging.yaml  build-packages.yaml  commit-wheels.yaml  create-release.yaml  tools.yaml
tools/: Dockerfile  README.md  pyproject.toml
tools/builder/: __init__.py
tools/builder/common/: __init__.py  args.py  shellcommand.py
tools/builder/container/: __init__.py  __main__.py  run.py
tools/builder/generate_index/: __init__.py  orchestrate.py  package_leaf.py  root_index.py
tools/builder/host/: __init__.py  __main__.py  containers.py  run.py
tools/builder/package_build/: __init__.py  build_wheel.py  download.py  orchestrate.py  shell_environment.py  types.py
tools/support/: run.sh
tools/tests/: conftest.py
tools/tests/builder/generate_index/: test_orchestrate.py  test_package_leaf.py  test_root_index.py
tools/tests/builder/host/: __init__.py  test_containers.py
tools/tests/builder/package_build/: conftest.py  test_download.py
tools/tests/test_data/index/simple/pyudev/: pyudev-0.23.0-py3-none-any.whl
wheels/: README.md  prefect-3.3.4-py3-none-any.whl.placeholder
