[tool.poetry]
name = "builder"
version = "0.0.1+992e55e.dirty"
description = "Builder for the opentrons python package index"
authors = ["Opentrons Engineering <engineering@opentrons.com>"]
readme = "README.md"
packages = [{include = "builder"}]

[tool.poetry.scripts]
run-build='builder.host:run_from_cmdline'
run-build-internal='builder.container:run_from_cmdline'

[tool.poetry-dynamic-versioning]
enable=false
vcs="git"
metadata=true
dirty=true
style="semver"
# this is the default dunamai (which is what poetry-dynamic-version uses under the hood)
# semver pattern ([1]) with a tools@ prefix added
# [1]: https://github.com/mtkennerly/dunamai/blob/master/dunamai/__init__.py
pattern="^tools@v((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)([-._]?((?P<stage>[a-zA-Z]+)[-._]?(?P<revision>\\d+)?))?(\\+(?P<tagged_metadata>.+))?$"

[tool.poe.tasks]
format = 'black .'
test = 'py.test ./tests'
_formatcheck = 'black --check ./builder ./tests'
_flake8 = 'pflake8 ./builder ./tests'
_typecheck = 'mypy ./builder ./tests'
lint = ['_formatcheck', '_flake8', '_typecheck']

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black="~=22.8.0"
mypy="==0.971"
flake8="~=5.0.4"
pyproject-flake8= "~=5.0.4"
flake8-noqa = "~=1.2.9"
pytest = "~=7.1.3"

[tool.mypy]
show_error_codes = true
warn_unused_configs = true
strict = true
no_implicit_optional = true
warn_return_any = true

[tool.flake8]
max-complexity = 9
extend-ignore = ["E203","E501", "ANN101", "ANN102"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
